--- a/src/pages/posts/《卓有成效的工程师》领读.md
+++ b/src/pages/posts/《卓有成效的工程师》领读.md
@@ -17,7 +17,7 @@
 	- 新员工入职培训
 	- 转入咨询团队
 - 2015 年，“深圳湾创客创业社区” CTO 技术合伙人，年薪 48w
-	- 聪明地工作 vs 努力地工作 ![image.png](../assets/image_1662637265460_0.png)
+	- 聪明地工作 vs 努力地工作 ![image.png](/_image/image_1662637265460_0.png)
 - 2016 年，回炉 Thoughtworks 成都，刻意练习培训，降薪近半
 	- 第一次接商业培训
 	- 高校实验室，认识周冰教练
@@ -57,14 +57,14 @@
 	- 数据结构和算法
 	- Dvorak 打字布局，双拼
 	- 视觉
-	- 演讲俱乐部 ![image.png](../assets/image_1662636965821_0.png)
+	- 演讲俱乐部 ![image.png](/_image/image_1662636965821_0.png)
 	- 培训
 -
 - **影响力**
-	- 敏捷之旅 ![image.png](../assets/image_1662636508734_0.png)
-	- 学习俱乐部(4us) ![image.png](../assets/image_1662635997726_0.png)
-	- 软件匠艺小组 codingstyle.cn ![image.png](../assets/image_1662636722588_0.png)
-	- 公众号：小波老西 ![image.png](../assets/image_1662636384568_0.png)
+	- 敏捷之旅 ![image.png](/_image/image_1662636508734_0.png)
+	- 学习俱乐部(4us) ![image.png](/_image/image_1662635997726_0.png)
+	- 软件匠艺小组 codingstyle.cn ![image.png](/_image/image_1662636722588_0.png)
+	- 公众号：小波老西 ![image.png](/_image/image_1662636384568_0.png)
 	- 知识星球：成为百万年薪敏捷教练
 -
 - **生命中的贵人**
@@ -76,7 +76,6 @@
 	- 申导@优普丰
 	- 韵涛，肖然，仝键
 	- 周冰教练
-	-
 - 不抱怨，思考做什么来改善现状
   小步前行，每一步都在之前的积累上提升
   努力分享，积累人脉
