Revise cover image

--- a/src/pages/posts/2012年度总结.md
+++ b/src/pages/posts/2012年度总结.md
@@ -1,13 +1,8 @@
-[2011年的总结][1]太粗糙，今年就写的清楚些。
-[1]:http://www.seabornlee.com/post/brief-conclusion-of-2011/
+<img src="/_image/2013-07-27/1.png?width=480"/>
 
-![2012年计划](/_image/2013-07-27/1.png?width=480)
+<small>2012年1月4日，我做了上面这个全年计划。转眼一年就过去了，说好的末日也没有来，生活还得继续，所以还是要总结一下2012并做一个2013的计划，是吧。</small>
 
-2012年1月4日，我做了上面这个全年计划。转眼一年就过去了，说好的末日也没有来，生活还得继续，所以还是要总结一下2012并做一个2013的计划，是吧。
-
-现在看起来，上面的计划是很粗糙的，可能是因为那时还没有了解到“生活方向盘”和时间管理吧。列表中大部分是关于自我修炼和成长的，还有一些重要的方面没有包含，比如情感、财富等。这一年，对家庭的关心少了很多，基本没有陪[老婆][3]下过厨房，也没有经常给父母长辈打电话，对你们说声抱歉。
-
- [3]: http://weibo.com/lxbandzxm?topnav=1&wvr=5&topsug=1
+现在看起来，上面的计划是很粗糙的，可能是因为那时还没有了解到“生活方向盘”和时间管理吧。列表中大部分是关于自我修炼和成长的，还有一些重要的方面没有包含，比如情感、财富等。这一年，对家庭的关心少了很多，基本没有陪老婆下过厨房，也没有经常给父母长辈打电话，对你们说声抱歉。
 
 ### 英语口语
 
@@ -30,8 +25,7 @@
 ### 耐力
 几个月的跑步，耐力提高还是比较明显的。
 下图是用nike plus的跑步记录，还有一些用runkeeper记录或没有记录的。
-[跑步计划][4]在6月的时候就完成了，本以为10公里是很难的事，没想到根本不值一提，还完成了一次半程马拉松。
-[4]: http://seabornlee.com/post/2012/06/25/run-run/
+[跑步计划](/posts/跑起来)在6月的时候就完成了，本以为10公里是很难的事，没想到根本不值一提，还完成了一次半程马拉松。
 
 明年增加频率和距离，挑战马拉松。
 ![跑步记录](/_image/2013-07-27/11.png)
@@ -43,18 +37,13 @@
 不管怎样，这一年对于如何写出易维护，易扩展，易测试的代码确实有了更深的认识。
 
 ### 学一门新语言
-通过[Ruby Koans][6]学习了ruby基础，然后使用Bootstrap和Rails搭起了图书共享平台，企图帮助大家[通过阅读获得成长][7]。
-
- [6]: http://rubykoans.com/
- [7]: http://www.seabornlee.com/2012/12/04/help-you-growing-by-reading
+通过[Ruby Koans](http://rubykoans.com/)学习了ruby基础，然后使用Bootstrap和Rails搭起了图书共享平台，企图帮助大家[通过阅读获得成长](/posts/通过阅读成长)。
 
 ![图书共享平台](/_image/2013-07-27/12.png)
 
 ### 公开讲话
 从一次在部门沙龙上的发言感受到，公开讲话能力的欠缺。
-所以在公司内发起了[4US学习小组][9]，从3月份开始，一共组织了50多场活动，几个月下来，可以看出认真对待参与的同事都有明显的进步。
-
-[9]: http://www.seabornlee.com/blog/2012/02/21/let-us-start-a-group/
+所以在公司内发起了4US学习小组，从3月份开始，一共组织了50多场活动，几个月下来，可以看出认真对待参与的同事都有明显的进步。
 
 除了在学习小组分享，还在部门技术沙龙上分享了一次Web应用安全的话题。
 ![学习小组活动视频](/_image/2013-07-27/13.png)
@@ -67,9 +56,7 @@
 唱歌都还好，居然还走秀，太不符合程序员的身份了。
 ![神州数码年会走秀](/_image/2013-07-27/16.png)
 
-总之，这一年脸皮确实厚了不少。感谢[神州数码][14]提供这样的平台，领导给予如此多的机会。
-
-[14]: http://e.weibo.com/u/1804123992?ref=http://s.weibo.com/weibo/%25E7%25A5%259E%25E5%25B7%259E%25E6%2595%25B0%25E7%25A0%2581?topnav=1&wvr=5&b=1
+总之，这一年脸皮确实厚了不少。感谢“神州数码”提供这样的平台，领导给予如此多的机会。
 
 ### 社区活动
 数一下2012年参加的沙龙有：
