--- a/src/pages/posts/跑起来.md
+++ b/src/pages/posts/跑起来.md
@@ -1,6 +1,6 @@
-![Image Title](/_image/2013-07-28/1c2736818fc51b436a1f4b63ddb0bf27.jpeg?width=640)
+<img src="/_image/2013-07-28/1c2736818fc51b436a1f4b63ddb0bf27.jpeg?width=640" />
 
-人生就像一场游戏，为了让这游戏更有趣，我在生涯模式里给自己设定了很多目标，就在今天我达成了一个新的成就。
+<small>人生就像一场游戏，为了让这游戏更有趣，我在生涯模式里给自己设定了很多目标，就在今天我达成了一个新的成就。</small>
 
 ### 新的成就
 2012年的目标之一是“完成10公里”，眼看今年过去一半儿了，一共也没跑过几次，且每次都是5公里左右，
