Revise cover image

--- a/src/pages/posts/2012年度总结.md
+++ b/src/pages/posts/2012年度总结.md
@@ -1,6 +1,6 @@
 <img src="/_image/2013-07-27/1.png?width=480"/>
 
-<small>2012年1月4日，我做了上面这个全年计划。转眼一年就过去了，说好的末日也没有来，生活还得继续，所以还是要总结一下2012并做一个2013的计划，是吧。</small>
+2012年1月4日，我做了上面这个全年计划。转眼一年就过去了，说好的末日也没有来，生活还得继续，所以还是要总结一下2012并做一个2013的计划，是吧。
 
 现在看起来，上面的计划是很粗糙的，可能是因为那时还没有了解到“生活方向盘”和时间管理吧。列表中大部分是关于自我修炼和成长的，还有一些重要的方面没有包含，比如情感、财富等。这一年，对家庭的关心少了很多，基本没有陪老婆下过厨房，也没有经常给父母长辈打电话，对你们说声抱歉。
 
