--- a/src/pages/posts/2015年度总结.md
+++ b/src/pages/posts/2015年度总结.md
@@ -1,3 +1,5 @@
+<img src='/_image/2015-10-24/1024 hackathon.png' />
+
 一晃又是一年，一年短过一年。该来盘点一下这一年都干了点啥了。
 
 ## 事业
@@ -58,7 +60,7 @@
 写了博客 30 篇左右。
 
 ### 翻译
-参与了 `Seven more languages in seven weeks` 的翻译，负责 Julia 一章。
+参与了 [《七周七语言 卷二](https://book.douban.com/subject/26921107/) 的翻译，负责 Julia 一章。
 
 ### 演讲
 加入了深圳最早的 Toastmasters 俱乐部 Shenzhen Toastmasters Club，并担任了半年的 Vice President of Public Relations，officers team 在充满激情的 President - Uncle Eric 的带领下，把俱乐部从趿趿可危做到了全城最火。会员数从 20 人左右增长到 50+ 人。会员出勤率，访问人数，最高到会人数，会员增长速度等都一再被刷新。
