--- a/src/pages/posts/如何爱上结对编程.md
+++ b/src/pages/posts/如何爱上结对编程.md
@@ -1,4 +1,8 @@
-![结对编程](http://upload-images.jianshu.io/upload_images/279826-b2238e0062321289.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+---
+date: 2017/07/14
+---
+
+<img src='/_image/20170714-1.png' />
 
 第一次听说结对编程的时候，我觉得太反直觉了，两个人用一台电脑写代码，效率不就下降了一半吗？后来我在团队里去尝试引入结对编程，也没感觉有多好，而且小伙伴们的反馈也觉得不好，还是一个人写代码更自在，也就做了一周就放弃了。
 直到 2012 年，第一次参加 Code Retreat 活动的时候，一天之内和日本人，德国人，英国人，美国人结对编程，不停地发出类似「哇哦，这道题目还能有这样的思路啊；哇哦，代码还能这么写啊；哇哦，原来 Vim 是这么用的啊」之类的感叹，让我对结对编程有了一点新的认识。
@@ -9,7 +13,7 @@
 # 是什么
 结对编程是「极限编程（eXtreme Programming）」里的一个实践。
 
-![极限编程](http://upload-images.jianshu.io/upload_images/279826-b70516d31aac7d86.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![极限编程](/_image/20170714-2.png)
 
 >结对编程技术是指两位程序员坐在同一工作台前开发软件。
 
@@ -59,19 +63,19 @@
 
 ### 键盘鼠标式
 
-![键盘鼠标式](http://upload-images.jianshu.io/upload_images/279826-5603d10e979232fc.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![键盘鼠标式](/_image/20170714-3.png)
 
 顾名思义，就是一个人操作键盘，一个人操作鼠标。当然，这种方式越来越不常用，因为程序员们以使用命令行和快捷键为荣，能用到鼠标的地方越来越少了。
 
 ### Ping-Pong 式
 
-![Ping-Pong 式](http://upload-images.jianshu.io/upload_images/279826-dfbd72c9dfb61b81.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![Ping-Pong 式](/_image/20170714-4.png)
 
 这种是采用 TDD（测试驱动开发）时常用的方式，A 写测试，B 实现和重构，然后 B 写下一个测试，A 来实现和重构。
 
 ### 领航员-驾驶员式
 
-![领航员-驾驶员式](http://upload-images.jianshu.io/upload_images/279826-e08afa3124a8898b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![领航员-驾驶员式](/_image/20170714-5.png)
 
 最后一种是 Navigator-Driver 式，Navigator 的注意力放在如何实现宏观目标，以及 Review Driver 编写的代码。 Driver 编辑代码，关注的是短期目标，代码细节。需要强调的是，Navigator 之所以叫这个名字，说明他不只是在一旁观看，他因为不操作键盘，想的会比较快，他要引领 Driver 的思路。同时，他在 Review 代码的时候，不要立即指出 Driver 编码中的小错误，那样容易打断 Driver 的思路，因为有可能 Driver 已经发现了，但想先把整个写完再去修复，以保持思路连贯，Navigator 可以在确认对方没有发现的情况下提示对方。
 
