--- a/src/pages/posts/通过阅读成长.md
+++ b/src/pages/posts/通过阅读成长.md
@@ -1,6 +1,9 @@
-**核心价值**：帮助大家通过阅读得到成长
+---
+date: 2012/12/04
+---
+<img src='https://img2.baidu.com/it/u=3604575857,1874436997&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=333' />
 
- 
+核心价值：帮助大家通过阅读得到成长
 
 **理念来源**
 
@@ -11,7 +14,6 @@
 虽然有的人读书是为了装13，但我认为大部分人是为了学习知识，增强理解力，而最终目的是对自己的内心或行为产生影响，从而获得“成长”。
 
  
-
 **通过阅读获得成长**
 
 如果一个人想要通过阅读获得成长，他通常会经历以下几个环节：
