--- a/src/pages/posts/如何理解「教练是一面镜子」.md
+++ b/src/pages/posts/如何理解「教练是一面镜子」.md
@@ -1,3 +1,8 @@
+---
+date: 2017/11/25
+pic: 'https://img1.baidu.com/it/u=3218347771,3925727123&fm=253&fmt=auto&app=138&f=JPEG?w=574&h=258'
+---
+
 昨天晚上，又一次参加了教练对话练习。
 练习后，观察者给我反馈，说我提的问题有诱导性，不够中立，而教练应该是一面镜子。
 我就一直在想，镜子是啥意思，到底要怎么才能做好一面镜子。
@@ -17,7 +22,7 @@
 镜子可以提供一个新的视角，让我们得以从另一个角度观察自身。
 世界顶级的教练也有自己的教练，就好像，世界顶级的理发师，也需要一个给自己理发的人。
 
-![](./_image/2017-02-21-09-42-50.jpg)
+![](/_image/2017-02-21-09-42-50.jpg)
 
 上图为 Johari Window，可以看到，一个人身上存在四个区域：
 * 公开区，自己和他人都知道。比如我会编程这件事。
