--- a/src/pages/posts/如何理解「教练是一面镜子」.md
+++ b/src/pages/posts/如何理解「教练是一面镜子」.md
@@ -1,6 +1,6 @@
 ---
-date: 2017/11/25
-pic: 'https://img1.baidu.com/it/u=3218347771,3925727123&fm=253&fmt=auto&app=138&f=JPEG?w=574&h=258'
+date: '2017/02/21'
+pic: '/_image/mirror.png'
 ---
 
 昨天晚上，又一次参加了教练对话练习。
