--- a/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
+++ b/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
@@ -2,9 +2,9 @@
 date: "2023/10/29"
 ---
 
-<img src='https://mmbiz.qpic.cn/sz_mmbiz_jpg/CNkZfuNdQWW0SJHyBYt15bzwLy94YymJkmTyaOlejET33YaKLa7fqRfIT8AibMpm364nhFib58OaLuNZadoibuic7g/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1' />
+<img src='./images/2023-10-29/1.jpg' />
 
-![公众号文章链接](https://mp.weixin.qq.com/s/pp-hbd9m8JJ3UyUqLLfrZw)
+[公众号文章链接](https://mp.weixin.qq.com/s/pp-hbd9m8JJ3UyUqLLfrZw)
 来大理三个月了，很多朋友在微信上问为什么来大理，孩子教育怎么办？
 实际上，来大理的主要原因就是孩子教育。
 
@@ -29,12 +29,10 @@ date: "2023/10/29"
 
 继续寻觅，得知老家遵义的另一个县，吉他之乡正安县居然有一所全国闻名的公办创新学校，是由上海田字格公益机构主办，早期教师主要是新东方支教老师，主打乡土人文教育，结合乡土环境开发课程，让农村孩子了解和热爱当地环境和文化。
 
-<img src='https://mmbiz.qpic.cn/sz_mmbiz_jpg/CNkZfuNdQWW0SJHyBYt15bzwLy94YymJyg8TWqjOP04wGeDWmQTlOTgZHHJic2d5Xp1V3x6LTHtLcgRibnDqlziag/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1'/>
+<img src='./images/2023-10-29/2.jpg' />
 我们也有幸去试读了三天，发现还有几位从上海来就读的。孩子们也蛮喜欢学校的课程，槽点是厕所味道太大和饭前要念诵感恩文。
 
-Image
-<img src='https://mmbiz.qpic.cn/sz_mmbiz_jpg/CNkZfuNdQWW0SJHyBYt15bzwLy94YymJ6XaW8IWzmQ5bj5oTWE3rtUUicgqXxrDHJUI4icDUQYboAmz0OOMRLyGw/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1'>
-
+<img src='./images/2023-10-29/3.jpg' />
 这所学校在山上，风景秀丽的同时，离县城开车要 20 分钟左右，试读那两天赶上暴雨，我们都很担心发生滑坡什么的 😱
 
 而且学校附近的路边坟头很多，常常一转弯就对着一个坟头，感觉有冒犯到 😷。
@@ -42,7 +40,7 @@ Image
 不过田字格学校在风景秀丽的万峰林新建了一所学校，硬件和交通都非常好。遗憾的是暂时只对本地学生开放，因为他们探索的就是让农村孩子在家门口享受到有特色的优质教育。
 
 读过创办人肖诗坚女士的著作，了解创办田字格公益机构和的初心和兴隆田小的坎坷，万分钦佩，也开始通过月捐的方式参与到这份有意义的事业中。
-<img src='https://mmbiz.qpic.cn/sz_mmbiz_jpg/CNkZfuNdQWW0SJHyBYt15bzwLy94YymJRrDKq6AduOb43wxsORKTCmPeuwMbuib9L4ZgfYssjqDAM5nO8ICc4Qg/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1'>
+<img src='./images/2023-10-29/4.jpg' />
 
 最早是通过灰爸的视频，找到了我最理想的教育环境。
 然后报了猫猫果的夏令营，孩子很喜欢，我们就打算来大理读猫猫果。来了大理后，群友郝哥非常热情地邀请去他家里做客，给我分享了他带着两个孩子全国探索创新教育的历程。才得知大理是中国创新教育最繁荣的地方，有几十家小微学校可供选择，自然教育，PBL 是标配。
@@ -53,7 +51,7 @@ Image
 
 妹妹也在菜地读了一周，因为菜地没有午睡的习惯，妹妹每天放学都在路上就昏睡过去，晚上就迟迟不愿上床，于是我们又找到了华德福幼儿园，目前一个多月过去了，妹妹也每天都很开心地去幼儿园，每周三苍山或洱海徒步，感觉运动能力强了很多。
 
-<img src='https://mmbiz.qpic.cn/sz_mmbiz_jpg/CNkZfuNdQWW0SJHyBYt15bzwLy94YymJTMmnRT8CP6PvngicZn68bMibxvSTfKBBEsDtjJwVckgicNLGo6ucv4tRw/640?wx_fmt=jpeg&wxfrom=5&wx_lazy=1&wx_co=1'>
+<img src='./images/2023-10-29/5.jpg' />
 
 每一所学校的理念都因创办人对教育的理解不同而不同，有的学校三年级以前不太注重文化课的学习，更在意孩子的自驱力，好奇心，对情绪的接纳，满足玩耍的天性。
 
