Fix cover image url

--- a/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
+++ b/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
@@ -2,7 +2,7 @@
 date: "2023/10/29"
 ---
 
-<img src='/image/2023-10-29/1.jpg' />
+<img src='/_image/2023-10-29/1.jpg' />
 
 [本文已发布到公众号，阅读体验更好](https://mp.weixin.qq.com/s/pp-hbd9m8JJ3UyUqLLfrZw)
 
