--- a/src/pages/posts/带娃来大理，躺平了吗？.md
+++ b/src/pages/posts/带娃来大理，躺平了吗？.md
@@ -2,8 +2,9 @@
 date: "2023-11-03"
 ---
 
-没想到上一篇文章“从成都搬到大理的首要原因：孩子教育”引发了这么多的关注和讨论。凌晨 4 点被手机震动吵醒，看到这样一条评论，让我久久无法入睡。
+<img src='/_image/20231103-0.png'>
 
+没想到上一篇文章“从成都搬到大理的首要原因：孩子教育”引发了这么多的关注和讨论。凌晨 4 点被手机震动吵醒，看到这样一条评论，让我久久无法入睡。
 ![](/_image/20231103-1.png)
 
 我们这一代，是通过读书改变命运，从农村走到一二线城市安身立命的第一代。这是成功的经验，我们理所应当传递给下一代。
