--- a/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
+++ b/src/pages/posts/从成都搬到大理的首要原因：孩子教育.md
@@ -4,7 +4,8 @@ date: "2023/10/29"
 
 <img src='/_image/2023-10-29/1.jpg' />
 
-[本文已发布到公众号，阅读体验更好](https://mp.weixin.qq.com/s/pp-hbd9m8JJ3UyUqLLfrZw)
+本文已发布到公众号，阅读体验更好。
+[点此前往](https://mp.weixin.qq.com/s/pp-hbd9m8JJ3UyUqLLfrZw)
 
 来大理三个月了，很多朋友在微信上问为什么来大理，孩子教育怎么办？
 实际上，来大理的主要原因就是孩子教育。
