--- a/src/pages/posts/2014年度总结.md
+++ b/src/pages/posts/2014年度总结.md
@@ -1,28 +1,35 @@
 ---
-date: '2014/12/31'
-pic: '/_image/2014 大事.png'
+date: "2014/12/31"
 ---
+
+<img src='/_image/2014 大事.png'>
 
 不知道是年纪越大，时间过的越快，还是整个世界正在发生什么，使得时间真的过得更快了。
 
 2014 没有做详细计划，只能从各个方面大概总结一下。
 
 ## 事业
+
 从进入顺丰工作后，一期是 Developer，二期是 Scrum Master，三期是 PM。
 前两个都比较擅长，PM 还是头一次，转换的并不好。
 
 ### 顺手寄
+
 这个是 PM + Developer。前期几天有 Siri 和客户沟通需求和设计，但很快人天用完了，导致和我沟通的时间不够。 两个月的时间，我和 Hogan 两个人在客户安排的小会议室里开发，每天结对，也让我真正成为 Vimer。
 最终这个项目因为各种原因超出了合同人天，最后扯了不少皮，作为 PM，我的干系重大。当然后来通过不断和客户沟通，挽回了大部分损失。
 作为 PM 学到的一个教训是：
->一定要先签合同再开工。
+
+> 一定要先签合同再开工。
 
 ### 我来贷
+
 前一个项目快要结束的时候，我就在想我下一个项目应该是什么样子，我希望能使用 Ruby 并使用英语沟通。这比较难，好像唯一一个使用 Ruby 的项目是金数据，并不是国外项目。
 我和国内交付团队的直接领导沟通后，没过多久，一家公司就出现在了我的面前，让我不得不再一次折服于“吸引力法则”。
 
 ## 家庭
+
 老婆怀孕期间平平安安的，心情也比较愉快。
 
 ## 健康
+
 优秀是男人能把老婆的肚子搞大，而不是自己的。
