--- a/src/pages/posts/2015年度总结.md
+++ b/src/pages/posts/2015年度总结.md
@@ -1,11 +1,13 @@
 ---
-date: '2015/12/31'
-pic: '/_image/2015-10-24/1024 hackathon.png'
+date: "2015/12/31"
 ---
+
+<img src='/_image/2015-10-24/1024 hackathon.png'>
 
 一晃又是一年，一年短过一年。该来盘点一下这一年都干了点啥了。
 
 ## 事业
+
 今年事业上又有大的变动，离开了我最喜欢的公司「ThoughtWorks」，加入了互联网创业公司[「深圳湾」](http://shenzhenware.com)。
 角色上从「咨询师」变成了「技术合伙人」。用前同事的话说：「别在场边干着急，趁着年轻，上场自己踢才带劲儿」。
 
@@ -17,6 +19,7 @@ pic: '/_image/2015-10-24/1024 hackathon.png'
 在公司做的演讲俱乐部「湾享会」，已成功举办 20 次，培养起了接班人，不用怎么操心了。
 
 ## 家庭
+
 1 月儿子们出生，赶上客户那边走流程，正好休了一个多月假，在他们最需要的时候陪在他们身边。
 妈妈也在这边帮忙带孩子，爸爸也偶尔在，这一年算是和父母相处时间比较多的一年了。
 
@@ -26,33 +29,38 @@ pic: '/_image/2015-10-24/1024 hackathon.png'
 感谢 Mavis 对我工作的支持，不仅没有因为在家时间少而抱怨，还把家庭照顾的很好，与妈妈相处很融洽，儿子们健康成长。还经常给我做不重样的早餐。
 
 ## 健康
+
 身体没什么毛病，体重在 68kg 左右。
 
 ## 技术
+
 上半年主要在搞 Jenkins，Maven，Gradle 搞企业持续集成平台。
 下半年主要是 Ruby on Rails，了解了一点 React Native，Vagrant，Docker，微服务。
 在 Hackthon 的时候写了两个 Chrome 扩展。
 
 ## 社区
+
 年初成立了「深圳软件匠艺小组」，在 8 月前，差不多每月一次活动。
 12 月建立了[「软件匠艺社区」](https://codingstyle.cn)，上线 12 天，原创文章 60+，注册用户 200+。
 
 在社区做的分享有：
 
-* 广州敏捷之旅 - Android 持续集成与自动化测试
-* 深圳软件匠艺小组第一期 - Git 入门
-* 深圳软件匠艺小组第二期 - 玩转 Github
-* 引导 APAC Day of Code Retreat
-* 深圳软件匠艺小组第四期 - 持续集成
-* Shenzhen Java User Group - 意图式编程
-* 中兴通讯 WXCOP - 高效编程的几个习惯
-* 引导 Global Day of Code Retreat
-* 珠海敏捷之旅 - 打造敏捷文化
+-   广州敏捷之旅 - Android 持续集成与自动化测试
+-   深圳软件匠艺小组第一期 - Git 入门
+-   深圳软件匠艺小组第二期 - 玩转 Github
+-   引导 APAC Day of Code Retreat
+-   深圳软件匠艺小组第四期 - 持续集成
+-   Shenzhen Java User Group - 意图式编程
+-   中兴通讯 WXCOP - 高效编程的几个习惯
+-   引导 Global Day of Code Retreat
+-   珠海敏捷之旅 - 打造敏捷文化
 
 参加了两次 Hackthon，第二次拿了个优秀奖。
 
 ## 兴趣
+
 ### 读书
+
 今年看过的书多，看完的少，主要是经营管理类的，产品设计，创业相关的。
 比较喜欢的有：
 《Google 如何运营》
@@ -60,12 +68,15 @@ pic: '/_image/2015-10-24/1024 hackathon.png'
 《系统思考》
 
 ### 写作
+
 写了博客 30 篇左右。
 
 ### 翻译
+
 参与了 [《七周七语言 卷二](https://book.douban.com/subject/26921107/) 的翻译，负责 Julia 一章。
 
 ### 演讲
+
 加入了深圳最早的 Toastmasters 俱乐部 Shenzhen Toastmasters Club，并担任了半年的 Vice President of Public Relations，officers team 在充满激情的 President - Uncle Eric 的带领下，把俱乐部从趿趿可危做到了全城最火。会员数从 20 人左右增长到 50+ 人。会员出勤率，访问人数，最高到会人数，会员增长速度等都一再被刷新。
 现在新的一届官员团队已经上任，相信他们还能做得更好！
 
@@ -74,6 +85,7 @@ pic: '/_image/2015-10-24/1024 hackathon.png'
 1 月 16 号，我将在公司主办的[「最硬 500」](http://www.shenzhenware.com/events/1047030305)大会上担任主持，对我而言是一个非常期待的挑战。
 
 ### 运动
+
 第一次[参加马拉松比赛](http://www.seabornlee.cn/post/sheng-huo/first-half-marathon)。
 跑步不规律，有时天天跑，有时一个月都不跑一次。
 
@@ -81,17 +93,21 @@ pic: '/_image/2015-10-24/1024 hackathon.png'
 健腹轮可以趴在地上再起来，臂力棒 40kg 一口气 50 次，扩胸器勉强可以拉 4 根。
 
 ### 旅游
+
 这一年好像没出过远门。
 借着工作之便去了巽疗湾，惠州，汕头。
 借着社区活动去了珠海。
 
 ### 其它
+
 学会了「杂耍球」，并在珠海演讲时用作开场破冰，在「湾享会」也借此做了一个学习方法的分享。
 充分体现了「学以致用」的精神。
 
 ## 总结
+
 今年做的事情与计划有很大出入，还是那句话：
->Plan is nothing, planning is everything.
+
+> Plan is nothing, planning is everything.
 
 正走在一个非典型程序员的路上，「Make things happen」的能力有很大提高。
 回顾到此结束，该做 2016 的计划了。
