--- a/src/pages/posts/通过阅读成长.md
+++ b/src/pages/posts/通过阅读成长.md
@@ -1,7 +1,8 @@
 ---
 date: 2012/12/04
 ---
-<img src='https://img2.baidu.com/it/u=3604575857,1874436997&fm=253&fmt=auto&app=138&f=JPEG?w=500&h=333' />
+
+<img src='/_image/image_2023-11-04-21-33-31.png' />
 
 核心价值：帮助大家通过阅读得到成长
 
@@ -11,9 +12,8 @@ date: 2012/12/04
 
 但仔细想想，人为什么要读书呢？
 
-虽然有的人读书是为了装13，但我认为大部分人是为了学习知识，增强理解力，而最终目的是对自己的内心或行为产生影响，从而获得“成长”。
+虽然有的人读书是为了装 13，但我认为大部分人是为了学习知识，增强理解力，而最终目的是对自己的内心或行为产生影响，从而获得“成长”。
 
- 
 **通过阅读获得成长**
 
 如果一个人想要通过阅读获得成长，他通常会经历以下几个环节：
@@ -34,14 +34,11 @@ date: 2012/12/04
 
 再结合自身情况，对需求进行优先级排序，在产品中实现这些功能，使产品能满足这些需求，以实现“帮助用户通过阅读得到成长”的目标。
 
- 
-
 能做的事情有：
 
 书单，借阅，下载，购买，笔记，评分，个人成长主页，书的主页，报表，虚拟学习顾问等。
 
-
-** 角色提炼**
+**  角色提炼**
 
 虚拟学习顾问
 
@@ -55,4 +52,4 @@ date: 2012/12/04
 
 [Fork Me][1]
 
- [1]: https://github.com/hkliya/Book-Sharing-System
+[1]: https://github.com/hkliya/Book-Sharing-System
