--- a/src/pages/posts/如何制定辅导计划.md
+++ b/src/pages/posts/如何制定辅导计划.md
@@ -1,17 +1,28 @@
-1 在新的团队推敏捷的时候，作为敏捷教练，应如何提前做好计划呢？ 大概要考虑哪些维度呢？
+---
+date: "2020/10/11"
+---
+
+<img src='/_image/image_2023-11-04-21-40-48.png'>
+
+## 新的团队推敏捷的时候，作为敏捷教练，应如何提前做好计划呢？ 大概要考虑哪些维度呢？
+
 通常的步骤是：摸清现状，确定目标，找出差距，制定策略，度量调整。
-现状可以从需求管理，团队协作，配置管理，质量保障四个维度去调研，各家公司都有自己都工具，比如 TW 的   「AMM」，优普丰的「精益敏捷平衡轮」；
+
+现状可以从需求管理，团队协作，配置管理，质量保障四个维度去调研，各家公司都有自己都工具，比如 TW 的 「AMM」，优普丰的「精益敏捷平衡轮」；
+
 和团队的领导，关键角色，业务方以及重要的干系人成立转型小组，一起共创要达到的目标；
 用目标减去现状就是差距；
+
 根据差距制定辅导的计划，比如提升透明度，加强流动，需求价值排序，需求拆解，单元测试等，落实到具体的时间阶段，引入外部专家资源等；
+
 制定周期性回顾计划，转型小组一起回顾计划执行情况，调整改进。
 
-去到团队里后，从「人-事-果」三个维度关注。
+到团队里后，从「人-事-果」三个维度关注。
 人，关注人的状态，情绪，团队士气，帮助团队破冰，建议信任与尊重；
 事，不断细分工作项，提升透明度，加速流动；
 果，引导团队关注用户价值，商业价值，不要做更多，而是创造更大的价值。
 
+## 来到一个新的团队之后，作为敏捷教练，可能会遇到哪些挑战性的问题呢？以及如何应对这些挑战呢？
 
-2 来到一个新的团队之后，作为敏捷教练，可能会遇到哪些挑战性的问题呢？以及老师是如何应对这些挑战呢？ 
 保持真诚、开放、透明、中立，就没有挑战性问题。
 知道答案就贡献想法，不知道就用引导的方式帮助团队，决定权始终在团队手里。
