--- a/src/pages/posts/编译优化.md
+++ b/src/pages/posts/编译优化.md
@@ -1,8 +1,14 @@
+---
+date: "2021/03/03"
+---
+
+<img src='/_image/image_2023-11-04-22-25-00.png'>
+
 关于函数调用开销，也是很多人担心的地方。
 我认为有几个点可以交流：
 首先，提取函数只是消除重复的一种方式，还有其他的方式，比如以下这个例子：
 
-![](./_image/2020-03-07/325617F4-9C94-45F6-8593-A08083894D3E.png)
+![](/_image/2020-03-07/325617F4-9C94-45F6-8593-A08083894D3E.png)
 第二个点是，整洁易维护的代码，更有利于编译优化，比如常量折叠，方法内联等。就是在编译期的时候，像宏展开一样，将函数代码替换到调用的地方去。
 对于一些方法提取，缩小了变量的作用域和生命周期，更有利于内存利用。
 还有一些运行时优化，比如惰性求值，如果一个函数是纯函数，在输入参数没有变化的情况下，可以直接使用缓存的值，而进行重新运行，不仅没有方法调用，还减少了计算，提升了运行性能。
