--- a/src/pages/posts/企业为什么需要一支技术教练团队.md
+++ b/src/pages/posts/企业为什么需要一支技术教练团队.md
@@ -2,10 +2,11 @@
 date: 2020/03/07
 ---
 
-为什么企业要建设内部教练队伍？
+<img src='/_image/image_2023-11-05-15-44-59.png'>
 
 企业会想要建设一支内部技术教练团队，通常是为了满足数字化转型的需要。
 数字化转型中，持续交付的能力是核心能力。要实现持续交付，需要 CI/CD 流水线，微服务架构，容器化等新的技能。其次必须把质量工作前移，从检测变成预防，让开发人员对质量负责。传统的开发负责功能开发，测试人员负责质量保障的模式，几个弊端：
+
 1. 发现问题相对较晚，修复成本更高，还有开发人员与测试人员之间的沟通成本和开发人员在开发新功能和修复缺陷之间的多任务切换导致的效率损失。
 2. 测试周期长，不能频繁执行回归测试，不能随时有信心重构代码，以保持灵活性。
 3. 测试团队膨胀，导致沟通管理成本变高。
@@ -14,7 +15,7 @@ date: 2020/03/07
 基于行业普遍缺乏基本功的现实，需要培养的人数众多，通过引入外部技术教练可以缩短培养周期，更快看到效果，但外部技术教练本身也很稀缺，在数字化转型的大潮中，价格也水涨船高，并且因为市场需求大，导致优秀的教练难以长期高投入度地服务于同一家企业。
 另外，由于行业特殊性，尤其金融行业的业务复杂度较高，外部教练也需要花时间熟悉业务才能指导业务开发，否则只能隔靴搔痒。
 
-除了支持数字化转型，内部教练队伍还有两个好处。  
+除了支持数字化转型，内部教练队伍还有两个好处。
 
 **1、降低选人门槛，缓解招聘压力**  
 毕业生招聘市场压力大，优质学生被大厂高年薪争夺。
