--- a/src/pages/posts/从普通人到培训师的八本书.md
+++ b/src/pages/posts/从普通人到培训师的八本书.md
@@ -2,6 +2,8 @@
 date: 2018/05/25
 ---
 
+<img src='/_image/image_2023-11-05-15-48-00.png'>
+
 培训是最值得投资的技能，掌握培训技术后，你可以把所有的特长都变成课程，帮助别人成长的同时还能获取不错的财务回报。
 我并不是说每个人都应该成为整天飞来飞去的职业培训师。在职场中，很多做得好的人教不好，教得好的人做不好，如果你有一定的专业技能，那么学习一些培训技术，对个人的职业发展是很有帮助的。你将会比其他领导更擅长发展他人，影响他人。
 最近在 ThoughtWorks 全国六个办公室轮番开启 TTT 课程，激发了许多同事对于培训的热情，为了帮助大家更快地走入培训的世界，推荐几本对我帮助很大，又很容易读的书。
@@ -9,48 +11,56 @@ date: 2018/05/25
 ![](/_image/2018-05-25-10-45-49.jpg)
 
 ## 《演讲达人成长记》
+
 演而优则培，很多人都是先做演讲开始获得正向反馈和信心，才开始走上培训道路的。可以说演讲是培训的基础，在演讲中我们会学会处理紧张情绪，吸引听众注意力，运用肢体语言等技巧。
 在 2013 有幸参与过这本书作者龙兄的演讲培训，立即被其人格魅力所吸引，马上找来这本书一口气读完，畅快淋漓。这本小说讲述一名不善言辞的小职员通过加入 ToastMasters 国际演讲俱乐部练习演讲，升职加薪，迎娶白富美，走上人生巅峰的故事。后来我也在深圳加入了 SZTM 俱乐部，头马大家庭给我的感受非常好，在一次次例会中，演讲和主持的能力也得到了极大的提升，为后面转型培训奠定了基础。
 
 ![](/_image/2018-05-25-10-48-42.jpg)
 
-##《培训师》
+## 《培训师》
+
 这本书也是一本小说，与前一本类似，书中有三条线，明线是一名项目经理转型内训师，最终走上独立培训师道路的经历；暗线是书中穿插大量的培训相关知识；辅线是主人公与几位女主的爱恨情仇。这本书给我的最大收获是三条线的创作方式，从此我在文章、演讲或培训中都会思考能不能设置三条线，让受众有更立体的体验。
 后来才知道这本书的作者是微博红人「琢磨先生」，还是知名的脱口秀玩家和培训师，真名郭城，他的其他书也很棒。
+
 ![](/_image/2018-05-25-10-49-31.jpg)
 
-##《学习的本质》
+## 《学习的本质》
+
 培训师应具备一个心态，一种帮助学员学习的心态。所以在研究怎么教之前，应该先研究人是怎么学习的。这本书可以帮助你建立起系统的学习观。学习的三个根本要素：动机，内容和交互。
 在培训中，用什么语言和活动激发学员的学习动机，让学员自动自发地参与而不是呆若木鸡地被灌输。如何了解学员对于学习主题的掌握水平，选择合适的学习内容，合理地编排学习材料的顺序，优化各个模块之间的逻辑。在学习过程中，如何持续抓住学员的注意力，通过眼神沟通，获取反馈等。有了这样一个框架后，你会发现所有培训中的事情都可以放到这三个方面。这边书里还提到了学习的几种障碍，也是我们在教学设计时应避免的。
 
-
 ![](/_image/2018-05-25-10-50-26.jpg)
 
-##《刻意练习》
-这本书告诉我们要把一项技能掌握到很高的水平，需要大量的刻意练习，刻意练习是将目标进行分解，通过大量重复且专注的练习，在练习后还要得到即时的反馈，才能算是有效的练习。培训师要掌握很多技能，开场提问互动，回答问题，扭转异议，讲解，演示，引导，点评，包括板书和视角引导，都需要大量的刻意练习。仅仅知道是不够的，要成为专业的培训师，必须把这些技能练习到毫不费力的地步。
->普通人练习到做对为止，专家练习到不会做错为止。
+## 《刻意练习》
 
+这本书告诉我们要把一项技能掌握到很高的水平，需要大量的刻意练习，刻意练习是将目标进行分解，通过大量重复且专注的练习，在练习后还要得到即时的反馈，才能算是有效的练习。培训师要掌握很多技能，开场提问互动，回答问题，扭转异议，讲解，演示，引导，点评，包括板书和视角引导，都需要大量的刻意练习。仅仅知道是不够的，要成为专业的培训师，必须把这些技能练习到毫不费力的地步。
+
+> 普通人练习到做对为止，专家练习到不会做错为止。
 
 ![](/_image/2018-05-25-10-51-43.jpg)
 
-##《关键 20 小时 - 快速学会任何技能》
+## 《关键 20 小时 - 快速学会任何技能》
+
 对培训师来说，掌握一些小众的技能在培训中会很有用，我在培训中常常用杂耍球，BBox，极限健身等来获取学员的注意力，调节学习气氛。
 很多人都被「一万小时天才理论」给吓着了，天哪，要成为专家，必须要经过一万小时的练习才行啊。然而现实中，我们并不需要成为每个领域的专家，大部分的技能应该当作辅助技能，差不多就行了。
 而要达到差不多的水平，所需的时间比你想象的要短得多。在这本书里，作者用学习新的键盘布局，瑜伽，Ukulele，帆船和网页编程演示了 20 小时的刻意练习能达到的效果。震撼过后，细细想来也确实如此，你看看游泳班，羽毛球班，驾校等是不是都学习不到 20 小时，就算掌握了这项技能了，20 小时专业学习过后，甚至比一些玩过几年的人玩的更好。但需要注意的是，这 20 小时不是随意玩玩的，必须是不断反思、改进、不断提高练习效率的 20 小时。
 ![](/_image/2018-05-25-10-52-53.jpg)
-#[[《4C法颠覆培训课堂：65]]种反转培训策略》
+
+## 《4C 法颠覆培训课堂：65 种反转培训策略》
+
 在做课程开发时，我们很容易就能罗列出要讲的知识点，但用什么样的教学活动让学员掌握这些知识点，一直没有很好的办法，如果给你推荐《学习心理学》，《教学设计原理》，大多数人会立即摔门而出。有了这本书，课堂立即变得生机勃勃了呢。
 4C 是 Connection - Concept - Concrete Practice - Conclusion 的缩写，是符合认知心理学的一个教学闭环。首先要调取与主题有关的经验，与学习主题建立关联，然后引入新的概念，通过实用练习体验新的概念和技能，最后回顾总结所学。
 在这本书里，共罗列了 65 种教学活动，分别对应「关联」、「概念」、「实用练习」和「总结」四个环节，在设计课程的时候，只需要从各个环节挑出一个活动，就完成了一堂课的设计。课程设计，从未如此轻松。
 
 ![](/_image/2018-05-25-10-53-27.jpg)
+
 ## 《习惯的力量》
+
 卓越的培训师要幽默，充满激情，得体，自信。我一直是个很内向的人，但为了培训效果，我逼着自己在讲台上要变成阳光热情的人。去年有位学员在培训结束聚餐时对我说：我怎么感觉你和白天不是同一个人，白天的你热情活泼，现在的你如此安静。当时另一位培训师说，小波老师很专业。
 现在我发现，一名卓越的培训师应该是表里如一的。因为学员不会记住你说了什么，而会记住你做了什么。在不同的场合表现大相径庭可能会让学员的认知产生偏差。所以我开始要求自己人前人后表里如一，我所教的东西，都应该是我能做到的，并且要培养成习惯，在什么场合都能保证行为的高度一致性。
 这本书讲述了习惯的原理，包括「触发器」、「惯常行为」和「奖励」。懂得习惯的原理，对于养成好习惯，纠正坏习惯都有很好的指导作用。
 
-![](/_image/2018-05-25-10-54-09.jpg)
-##《平衡的智慧》
+![](/_image/2018-05-25-10-54-09.jpg) ##《平衡的智慧》
 培训师常年飞来飞去，远离家人，会面临很多的诱惑和挑战。这本书是英特尔的 CTO 写的，分享了他如何在工作、家庭和信仰之间取得平衡的技巧。通过阅读这本书，我开始重新思考我的优先顺序，可视化自己的原则，依据原则行事，省却了很多纠结。
 
 我在去年的一次公开课上被一位学员给了一个非常低的评价，大概意思是说，小波老师这样的口才，就别讲课了，顶多做个班主任。
